--- a/Practice2.ipynb
+++ b/Practice2.ipynb
@@ -69,7 +69,7 @@
     "    \n",
     "    h=6.5 #class variable\n",
     "    \n",
-    "    def __init__(self, name, fname, course):  #constructor\n",
+    "    def __init__(self, name, fname, course):  #constructor ###we cannot assign more than 1 constructor in a class\n",
     "        self.name=name #instance variable\n",
     "        self.fname=fname #instance variable\n",
     "        self.course=course #instance variable\n",
@@ -84,7 +84,7 @@
     "    def eating(self, eat=\"roti\"):\n",
     "        print(\"he is eating: \"+eat)\n",
     "    \n",
-    "    ##when we are working with class variables then it is instance method    \n",
+    "    ##when we are working with class variables then it is class method    \n",
     "    @classmethod\n",
     "    def height(cls): ##class methods\n",
     "        return \"the height of this man is \"+str(cls.h)\n",
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1311,8 +1311,8 @@
      "output_type": "stream",
      "text": [
       "['name', 'state', 'country']\n",
-      "['ahsan', 'karachi', 'pakistan']\n",
-      "['ahsan1', 'karachi1', 'pakistan1']\n"
+      "['ahsan', 'islamabad', 'pakistan']\n",
+      "['ahsan11', 'islamabad11', 'pakistan11']\n"
      ]
     }
    ],
