--- a/Assignments_1b.ipynb
+++ b/Assignments_1b.ipynb
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -731,9 +731,13 @@
      "text": [
       "Input pattern: direction(UP,Down,Left,right) any_int_value(3,4,1,5,3,0)\n",
       "up 5\n",
-      "\n",
-      "( 5 , 0 )\n",
-      "Current Position is : 5\n"
+      "down 3\n",
+      "left 1\n",
+      "right 2\n",
+      "up 2\n",
+      "x\n",
+      "( 4 , 1 )\n",
+      "Current Position is : 4\n"
      ]
     }
    ],
