iter,genenrator,json

--- a/Practice2.ipynb
+++ b/Practice2.ipynb
@@ -8,6 +8,7 @@
     "# OOP concepts\n",
     "# Exception handling\n",
     "# file handling\n",
+    "# CSV\n",
     "# datetime\n",
     "# regex\n",
     "# -------XXXXXXX--------\n",
@@ -1211,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,6 +1222,28 @@
     "\n",
     "for data in f:\n",
     "    f1.write(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "##how to remove file\n",
+    "import os\n",
+    "if os.path.exists(\"demofile.txt\"):\n",
+    "  os.remove(\"demofile.txt\")\n",
+    "else:\n",
+    "  print(\"The file does not exist\") "
    ]
   },
   {
@@ -1303,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1311,8 +1334,8 @@
      "output_type": "stream",
      "text": [
       "['name', 'state', 'country']\n",
-      "['ahsan', 'islamabad', 'pakistan']\n",
-      "['ahsan11', 'islamabad11', 'pakistan11']\n"
+      "['ahsan', 'karachi', 'pakistan']\n",
+      "['ahsan1', 'karachi1', 'pakistan1']\n"
      ]
     }
    ],
@@ -1327,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1394,12 +1417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from csv import writer\n",
     "with open('file_csv.csv', mode='w',newline='') as w: ##to remove newline space we use newline=''\n",
+    "    #csv_writer=writer(w,delimiter='-') \n",
     "    csv_writer=writer(w) \n",
     "    ###there must be only one list as parameter in writerows or we can use list inside list for multiple values\n",
     "    ##1st way\n",
