--- a/Practice1.ipynb
+++ b/Practice1.ipynb
@@ -9,7 +9,6 @@
     "# set\n",
     "# list\n",
     "# help\n",
-    "# itterator\n",
     "# while\n",
     "# for\n",
     "# if\n",
@@ -2098,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2106,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2115,6 +2114,26 @@
    "source": [
     "mark2=list(range(1,11))\n",
     "mark2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums=[1,2,3,5]\n",
+    "p=[2,2,2,2]\n",
+    "square=list(map(pow,nums,p))\n",
+    "print(square)"
    ]
   },
   {
@@ -2623,40 +2642,6 @@
    ],
    "source": [
     "import this"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ITERATOR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "2\n",
-      "54\n"
-     ]
-    }
-   ],
-   "source": [
-    "lis=[1,4,2,54]\n",
-    "\n",
-    "iter1=iter(lis)\n",
-    "\n",
-    "print(iter1.__next__())\n",
-    "print(iter1.__next__())\n",
-    "print(iter1.__next__())\n",
-    "print(next(iter1))"
    ]
   },
   {
