--- a/Assignments_1b.ipynb
+++ b/Assignments_1b.ipynb
@@ -642,32 +642,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class generator():\n",
-    "    \n",
-    "    def __init__(self,num):\n",
-    "        self.__num=num\n",
-    "        \n",
-    "    def divisor(self):\n",
-    "        for i in range(0,self.__num+1):   \n",
-    "            if i%7==0:\n",
-    "                print(i)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter num: 80\n",
       "0\n",
       "7\n",
       "14\n",
@@ -679,15 +660,28 @@
       "56\n",
       "63\n",
       "70\n",
-      "77\n"
+      "77\n",
+      "84\n",
+      "91\n",
+      "98\n"
      ]
     }
    ],
    "source": [
-    "num=int(input(\"enter num: \"))\n",
-    "obj=generator(num)\n",
+    "class gen():\n",
+    "    \n",
+    "    def __init__(self,num):\n",
+    "        self.num=num\n",
+    "    \n",
+    "    def div(self):\n",
+    "        for i in range(self.num):\n",
+    "            if i%7==0:\n",
+    "                yield i\n",
     "\n",
-    "obj.divisor()"
+    "obj=gen(100)\n",
+    "\n",
+    "for i in obj.div():\n",
+    "    print(i)"
    ]
   },
   {
