--- a/Practice2.ipynb
+++ b/Practice2.ipynb
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1683,6 +1683,29 @@
     "print(b.span())\n",
     "print(b.start())\n",
     "print( b.end())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Ahsan rao\"\n",
+    "comp=re.compile(r\"^[a-zA-Z\\s]{3,}$\")\n",
+    "\n",
+    "if comp.search(name) != None:\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
    ]
   },
   {
