create a movie rec system

--- a/AI & Machine Learning Algorithms/AhsanGhaffar(014)_AI_lab08_(Decision Tree)_Classification.ipynb
+++ b/AI & Machine Learning Algorithms/AhsanGhaffar(014)_AI_lab08_(Decision Tree)_Classification.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "# seperate features and labels from Testing dataset   *labels are useless in training dataset\n",
     "feature_test=features[max_index:len(data_set),:]\n",
-    "label_test=labels[max_index:len(data_set)] # in the end we use label_test for checking the percentage of correct prediction\n"
+    "label_test=labels[max_index:len(data_set)] # in the end we use label_test for checking the percentage of correct prediction"
    ]
   },
   {
