--- a/pandas/pandas_basics.ipynb
+++ b/pandas/pandas_basics.ipynb
@@ -1,264 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import os, os.path\n",
-    "\n",
-    "dir =\".\"\n",
-    "\n",
-    "onlyfiles = next(os.walk(dir))[2] #dir is your directory path as string\n",
-    "a = len(onlyfiles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x  = np.array([1,2,3])\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.ndim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int32')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.dtype"
+    "# Pandas \n",
+    "### (we can apply all numpy functions on pandas dataframe to manipulate the data such as +,-,*,mean,count,unique )\n",
+    "#### pd.Series(data, index, dtype, name)\n",
+    "#### pd.index\n",
+    "#### pd.values\n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 3, 5, 7, 9])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y  = np.arange(1,10,2)\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y  = np.arange(0,15).reshape(5,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2],\n",
-       "       [ 3,  4,  5],\n",
-       "       [ 6,  7,  8],\n",
-       "       [ 9, 10, 11],\n",
-       "       [12, 13, 14]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 3)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c  = np.zeros((5,3), dtype=np.int64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0]], dtype=int64)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.dtype"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -276,13 +44,39 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import numpy as np\n",
     "obj = pd.Series([4, 7, -5, 3])\n",
     "print(obj)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before apply unique <PandasArray>\n",
+      "[18, 14, 18, 12, 17, 16, 11, 10, 14, 19]\n",
+      "Length: 10, dtype: int32\n",
+      "\n",
+      "after unique <PandasArray>\n",
+      "[18, 14, 12, 17, 16, 11, 10, 19]\n",
+      "Length: 8, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df=pd.array(np.random.randint(10,20,10))\n",
+    "print(\"Before apply unique\",df)\n",
+    "print(\"\\nafter unique\",pd.unique(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -303,13 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "List\n",
+      "Jan    100\n",
+      "Feb    200\n",
+      "Mar    100\n",
+      "Apr    400\n",
+      "dtype: int64\n",
+      "[100 200 100 400]\n",
+      "Index(['Jan', 'Feb', 'Mar', 'Apr'], dtype='object')\n",
+      "\n",
+      "Dictionary\n",
       "Jan    100\n",
       "Feb    200\n",
       "Mar    100\n",
@@ -322,14 +126,21 @@
    ],
    "source": [
     "sales = pd.Series([100, 200, 100, 400], index = ['Jan', 'Feb', 'Mar','Apr'])\n",
+    "\n",
+    "sales_dict = pd.Series({'Jan':100, 'Feb':200, 'Mar':100,'Apr':400}) ##use dictionary inplace of index\n",
+    "print(\"List\")\n",
     "print(sales)\n",
     "print(sales.values)\n",
-    "print(sales.index)"
+    "print(sales.index)\n",
+    "print(\"\\nDictionary\")\n",
+    "print(sales_dict)\n",
+    "print(sales_dict.values)\n",
+    "print(sales_dict.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +225,7 @@
    ],
    "source": [
     "print(sw[1])\n",
-    "print(sw[\"Aug\"])\n",
-    "print(sw[\"Dec\"])\n"
+    "print(sw[\"Aug\"])"
    ]
   },
   {
@@ -456,9 +266,9 @@
     }
    ],
    "source": [
-    "print(sw > 20)\n",
+    "print(sw > 20) ##jo values greater than 20 hongi unhe True or False se show krega\n",
     "print()\n",
-    "print(sw[sw > 20])\n"
+    "print(sw[sw > 20]) ##jo values greater than 20 hongi unhe print krega"
    ]
   },
   {
